@@ -6,6 +6,8 @@ Gora Change Log
 
 0.3 (trunk) Current Development:
 
+* GORA-95 Catch incorrect mapping configurations and implement sufficient logging in CassandraMapping. (lewismc)
+
 * GORA-** Commit to fix classloading for CLI execution (lewismc)
 
 * GORA-122 gora-accumulo/lib is not cleaned after mvn clean (lewismc)
